--- a/catalogo.html
+++ b/catalogo.html
@@ -144,38 +144,38 @@
         #j1 {
           background-image: url(imagenes/god.jpg);
           width: 150px;
-          margin-left: 70px;
-          margin-right: 110px;
+          margin-left: 100px;
+          margin-right: 100px;
         }
           #j2 {
           background-image: url(imagenes/ark.jpg);
           width: 150px;
-          margin-left: 70px;
-          margin-right: 110px;
+          margin-left: 100px;
+          margin-right: 100px;
         }
           #j3 {
           background-image: url(imagenes/rd22.jpg);
           width: 150px;
-          margin-left: 70px;
-          margin-right: 110px;
+          margin-left: 100px;
+          margin-right: 100px;
         }
           #j4 {
           background-image: url(imagenes/gr.jpg);
-          width: 100px;
-          margin-left: 70px;
-          margin-right: 110px;
+          width: 150px;
+          margin-left: 100px;
+          margin-right: 100px;
         }
           #j5 {
           background-image: url(imagenes/spider.jpg);
-          width: 1oS0px;
-          margin-left: 70px;
-          margin-right: 110px;
+          width: 100px;
+          margin-left: 100px;
+          margin-right: 100px;
         }
          #j6 {
           background-image: url(imagenes/hzd.jpg);
           width: 150px;
-          margin-left: 70px;
-          margin-right: 110px;
+          margin-left: 100px;
+          margin-right: 100px;
         }
 
     </style>
@@ -231,22 +231,17 @@
             <button>Añadir al Carrito</button>
         </div>
     </main>
-
- <nav>
+<nav>
     <script src="https://kit.fontawesome.com/14bdcc382b.js" crossorigin="anonymous"></script>
-        <body>
-        <nav class="social-nav">
-           <h1>
-             <a href="#" target="_blank"><i class="fab fa-facebook"></i></a>
-            <a href="#" target="_blank"><i class="fab fa-x"></i></a>
-            <a href="https://www.instagram.com/thiago_nehuen_?igsh=MTl5OGZsNWQ0Y3c0NA==" target="_blank"><i class="fab fa-instagram"></i></a>
-            <a href="#" target="_blank"><i class="fab fa-tiktok"></i></a>
-            <a href="https://wa.me/541127258364" target="_blank"><i class="fab fa-whatsapp"></i></a>
-           </h1>
-        </nav>
-
+    </nav>
+    <nav class="social-nav">
+        <a href="#" target="_blank"><i class="fab fa-facebook"></i></a>
+        <a href="#" target="_blank"><i class="fab fa-x-twitter"></i></a> <a href="https://www.instagram.com/thiago_nehuen_?igsh=MTl5OGZsNWQ0Y3c0NA==" target="_blank"><i class="fab fa-instagram"></i></a>
+        <a href="#" target="_blank"><i class="fab fa-tiktok"></i></a>
+        <a href="https://wa.me/541127258364" target="_blank"><i class="fab fa-whatsapp"></i></a>
+    </nav>
     <footer>
-        <p>&copy; 2025 Gameshop CTG. Todos los derechos reservados.</p>
+        <p>© 2025 Gameshop CTG. Todos los derechos reservados.</p>
     </footer>
 </body>
-</html>
+</html> 
