--- a/catalogo2.html
+++ b/catalogo2.html
@@ -171,38 +171,38 @@
         #y1 {
           background-image: url(imagenes/c1.jpg);
           width: 150px;
-          margin-left: 70px;
-          margin-right: 110px;
+          margin-left: 100px;
+          margin-right: 100px;
         }
           #y2 {
           background-image: url(imagenes/c2.jpg);
           width: 150px;
-          margin-left: 70px;
-          margin-right: 110px;
+          margin-left: 100px;
+          margin-right: 100px;
         }
           #y3 {
           background-image: url(imagenes/c3.jpg);
           width: 150px;
-          margin-left: 70px;
-          margin-right: 110px;
+          margin-left: 100px;
+          margin-right: 100px;
         }
           #y4 {
           background-image: url(imagenes/y2.jpg);
           width: 150px;
-          margin-left: 70px;
-          margin-right: 110px;
+          margin-left: 100px;
+          margin-right: 100px;
         }
           #y5 {
           background-image: url(imagenes/y3.jpg);
-          width: 150px;
-          margin-left: 70px;
-          margin-right: 110px;
+          width: 130px;
+          margin-left: 100px;
+          margin-right: 100px;
         }
          #y6 {
           background-image: url(imagenes/hzd.jpg);
           width: 150px;
-          margin-left: 70px;
-          margin-right: 110px;
+          margin-left: 100px;
+          margin-right: 100px;
         }
         .social-nav{ 
             background-color: #d6d6d6;
@@ -263,18 +263,15 @@
     </main>
  <nav>
     <script src="https://kit.fontawesome.com/14bdcc382b.js" crossorigin="anonymous"></script>
-        <body>
-        <nav class="social-nav">
-           <h1>
-             <a href="#" target="_blank"><i class="fab fa-facebook"></i></a>
-            <a href="#" target="_blank"><i class="fab fa-x"></i></a>
-            <a href="https://www.instagram.com/thiago_nehuen_?igsh=MTl5OGZsNWQ0Y3c0NA==" target="_blank"><i class="fab fa-instagram"></i></a>
-            <a href="#" target="_blank"><i class="fab fa-tiktok"></i></a>
-            <a href="https://wa.me/541127258364" target="_blank"><i class="fab fa-whatsapp"></i></a>
-           </h1>
-        </nav>
+    </nav>
+    <nav class="social-nav">
+        <a href="#" target="_blank"><i class="fab fa-facebook"></i></a>
+        <a href="#" target="_blank"><i class="fab fa-x-twitter"></i></a> <a href="https://www.instagram.com/thiago_nehuen_?igsh=MTl5OGZsNWQ0Y3c0NA==" target="_blank"><i class="fab fa-instagram"></i></a>
+        <a href="#" target="_blank"><i class="fab fa-tiktok"></i></a>
+        <a href="https://wa.me/541127258364" target="_blank"><i class="fab fa-whatsapp"></i></a>
+    </nav>
     <footer>
-        <p>&copy; 2025 Gameshop CTG. Todos los derechos reservados.</p>
+        <p>© 2025 Gameshop CTG. Todos los derechos reservados.</p>
     </footer>
 </body>
 </html>
