--- a/index.html
+++ b/index.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-
-
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gameshop CTG</title>
@@ -40,26 +38,23 @@
             </article>
             <article class="article">
                 <h2>Joysticks/consolas</h2>
-                <img src="imagenes/y2.jpg" width="25%">
+                <img src="imagenes/y2.jpg" width="32%">
                 <p>diferentes diseños de joysticks y consolas <a href="catalogo2.html">ver mas</a></p>
                
             </article>
         </section>
     </main>
-    <nav>
+ <nav>
     <script src="https://kit.fontawesome.com/14bdcc382b.js" crossorigin="anonymous"></script>
-        <body>
-        <nav class="social-nav">
-           <h1> 
-             <a href="#" target="_blank"><i class="fab fa-facebook"></i></a>
-            <a href="#" target="_blank"><i class="fab fa-x"></i></a>
-            <a href="https://www.instagram.com/thiago_nehuen_?igsh=MTl5OGZsNWQ0Y3c0NA==" target="_blank"><i class="fab fa-instagram"></i></a>
-            <a href="#" target="_blank"><i class="fab fa-tiktok"></i></a>
-            <a href="https://wa.me/541127258364" target="_blank"><i class="fab fa-whatsapp"></i></a>
-           </h1>
-        </nav>
-         <footer>
-        <p>&copy; 2025 Gameshop CTG. Todos los derechos reservados.</p>
+    </nav>
+    <nav class="social-nav">
+        <a href="#" target="_blank"><i class="fab fa-facebook"></i></a>
+        <a href="#" target="_blank"><i class="fab fa-x-twitter"></i></a> <a href="https://www.instagram.com/thiago_nehuen_?igsh=MTl5OGZsNWQ0Y3c0NA==" target="_blank"><i class="fab fa-instagram"></i></a>
+        <a href="#" target="_blank"><i class="fab fa-tiktok"></i></a>
+        <a href="https://wa.me/541127258364" target="_blank"><i class="fab fa-whatsapp"></i></a>
+    </nav>
+    <footer>
+        <p>© 2025 Gameshop CTG. Todos los derechos reservados.</p>
     </footer>
 </body>
 </html>
